@@ -1,5 +1,5 @@
 
-Copyright (C) 2001-2011 Michael Teo <miketeo (a) miketeo.net>
+Copyright (C) 2001-2012 Michael Teo <miketeo (a) miketeo.net>
 
 This software is provided 'as-is', without any express or implied warranty.
 In no event will the author be held liable for any damages arising from the
